<?xml version="1.0"?>
<package format="2">
  <name>ret</name>
  <version>0.1.0</version>
  <description>ROS Endurance Test</description>

  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">ipa-kut</maintainer>
  <license>Apache 2.0</license>

  <author >ipa-kut</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>

</package>
